# LibCppLogging

./: CMakeLists.txt  README.md
LibCppLogging/: CMakeLists.txt  CTimeService.cpp  CTimeService.h  ChannelSettings.h  ConsoleService.h  DateTimeService.h  Destination.h  FileService.h  Level.h  LogFile.cpp  LogFile.h  LogLevel.h  LogMessage.cpp  LogMessage.h  Logger.cpp  Logger.h  Logging.h  OutputChannel.cpp  OutputChannel.h  StandardError.cpp  StandardError.h  StandardOutput.cpp  StandardOutput.h
LibCppLoggingTests/: CMakeLists.txt  LogMessageTests.cpp  LogMessageTests.h  LoggerTests.cpp  LoggerTests.h  MockDateTimeService.h  MockLogService.h  MockOutputChannel.h  OutputChannelTests.cpp  OutputChannelTests.h
docs/: LibCppLogging Class Diagram.odg  Test.md  index.html
include/: CTimeService.h  ChannelSettings.h  DateTimeService.h  LibCppLogging.h  LogFile.h  LogLevel.h  LogMessage.h  Logger.h  OutputChannel.h  StandardError.h  StandardOutput.h
src/: CMakeLists.txt  CTimeService.cpp  LogFile.cpp  LogMessage.cpp  Logger.cpp  OutputChannel.cpp  StandardError.cpp  StandardOutput.cpp
tests/: CMakeLists.txt  LogMessageTests.cpp  LogMessageTests.h  LoggerTests.cpp  LoggerTests.h  MockDateTimeService.h  MockOutputChannel.h  OutputChannelTests.cpp  OutputChannelTests.h
